[gd_scene load_steps=10 format=3 uid="uid://6lwgfj5k1ar2"]

[ext_resource type="Script" path="res://1_missioon.gd" id="1_8pint"]
[ext_resource type="Texture2D" uid="uid://cyu67cmoaxmk6" path="res://xd5h7XGcByWFgAAAABJRU5ErkJggg.png" id="1_f5pr3"]
[ext_resource type="Texture2D" uid="uid://caw0vbbd31262" path="res://grass.png" id="2_1s55j"]
[ext_resource type="PackedScene" uid="uid://bf6d7lrvucrdq" path="res://enemy2.tscn" id="3_3kedb"]
[ext_resource type="PackedScene" uid="uid://sjng3lyk2bmx" path="res://gtrg/man_with_gun.tscn" id="3_j0rah"]
[ext_resource type="PackedScene" uid="uid://xs2es6epj884" path="res://starik.tscn" id="4_juqu6"]
[ext_resource type="PackedScene" uid="uid://c13ucyfb7xypo" path="res://enemy.tscn" id="6_ta8ve"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rssj6"]
size = Vector2(298.288, 72.9878)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_glyjm"]
size = Vector2(20, 216.644)

[node name="1missioon" type="Node2D"]
script = ExtResource("1_8pint")
enemy_scenes = Array[PackedScene]([ExtResource("6_ta8ve")])
enemy_scenes2 = Array[PackedScene]([ExtResource("3_3kedb")])

[node name="EnemySpawnTimer2" type="Timer" parent="."]
autostart = true

[node name="EnemySpawnTimer" type="Timer" parent="."]
process_callback = 0
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1058, 315)
scale = Vector2(5.84, 5.84)
zoom = Vector2(1.14, 1.14)

[node name="IWv4v5b" type="Sprite2D" parent="."]
position = Vector2(1066.83, 282.102)
scale = Vector2(0.651667, 0.641494)
texture = ExtResource("1_f5pr3")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(1058, 315)
scale = Vector2(5.84, 5.84)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(4.45206, 96.2329)
shape = SubResource("RectangleShape2D_rssj6")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-178.275, -2.56851)
rotation = -1.5708
shape = SubResource("RectangleShape2D_rssj6")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(157.021, 24.5548)
shape = SubResource("RectangleShape2D_glyjm")

[node name="Grass" type="Sprite2D" parent="."]
position = Vector2(480, 655)
scale = Vector2(0.654, 0.383)
texture = ExtResource("2_1s55j")

[node name="Grass2" type="Sprite2D" parent="."]
position = Vector2(1712, 655)
scale = Vector2(0.654, 0.383)
texture = ExtResource("2_1s55j")

[node name="Grass3" type="Sprite2D" parent="."]
position = Vector2(1096, 655)
scale = Vector2(0.654, 0.383)
texture = ExtResource("2_1s55j")

[node name="CharacterBody2D" parent="." instance=ExtResource("4_juqu6")]
position = Vector2(1044, 537)

[node name="PlayerSpawnPos" type="Marker2D" parent="."]
position = Vector2(1210, 595)

[node name="Man_with_gun" parent="." instance=ExtResource("3_j0rah")]
position = Vector2(1229, 568)

[node name="LaserContainer" type="Node2D" parent="."]

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="EnemyContainer2" type="Node2D" parent="."]

[connection signal="timeout" from="EnemySpawnTimer2" to="." method="_on_enemy_spawn_timer_2_timeout"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
